...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_ending"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="@+id/layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/again_ending"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="again!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
...
